--- a/PicGallery/App.config
+++ b/PicGallery/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="PicGallery.Properties.Settings.pg_afishaConnectionString"
+            connectionString="user id=root;server=localhost;database=pg_afisha"
+            providerName="MySql.Data.MySqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
